fix: SecutiryConfig cors 설정 수정